--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 /tests/tests/
 /tests/results/
 application/config/database.php
+tareas/100001/Moped vs Bike - Analysis of the Technology Delta.pdf
