--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 /tests/results/
 application/config/database.php
 tareas/100001/Moped vs Bike - Analysis of the Technology Delta.pdf
+tareas/100010/17/Acceptance letter.pdf
+tareas/100007/Learning agreement.pdf
+tareas/100007/14/Modello lettera di motivazione.pdf
+tareas/100007/13/Acceptance letter.pdf
